test/types/scalar/bradc/index-int.good
index-int.chpl:1: error: int(64) does not support indexing
